<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="sym_double_zero">00</string>
    <string name="sym_zero">0</string>
    <string name="sym_one">1</string>
    <string name="sym_two">2</string>
    <string name="sym_three">3</string>
    <string name="sym_four">4</string>
    <string name="sym_five">5</string>
    <string name="sym_six">6</string>
    <string name="sym_seven">7</string>
    <string name="sym_eight">8</string>
    <string name="sym_nine">9</string>
    <string name="sym_comma">,</string>
    <string name="sym_equal">=</string>
    <string name="sym_minus">-</string>
    <string name="sym_plus">+</string>
    <string name="sym_multiple">x</string>
    <string name="sym_divide">÷</string>
    <string name="sym_percent">%</string>
    <string name="sym_del">Del</string>
    <string name="sym_ac">AC</string>

</resources>
